--- a/app/src/main/res/layout/activity_first_time_landlord.xml
+++ b/app/src/main/res/layout/activity_first_time_landlord.xml
@@ -6,27 +6,67 @@
     android:layout_height="match_parent"
     tools:context=".login.FirstTimeLandlordActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="First time login as landlord?"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/firstTimeLandlordAddPropertyButton"
-        android:text="Add property"
-        android:layout_centerHorizontal="true"
-        />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/firstTimeLandlordSkipButton"
-        android:text="Skip"
-        android:layout_below="@id/firstTimeLandlordAddPropertyButton"
-        android:layout_centerHorizontal="true"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/first_time_login_as_landlord"
+                android:textSize="@dimen/large_text_font_size"
+                android:textColor="@color/primary_blue"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8">
+
+            <android.widget.Button
+                android:layout_width="@dimen/large_button_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/firstTimeLandlordAddPropertyButton"
+                android:text="@string/add_property"
+                android:textColor="@color/white"
+                android:textSize="@dimen/large_button_font_size"
+                android:background="@drawable/primary_button_background_state"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="@dimen/large_button_padding"
+                android:paddingBottom="@dimen/large_button_padding"
+                android:layout_above="@id/firstTimeLandlordSkipButton"
+                />
+
+            <android.widget.Button
+                android:layout_width="@dimen/secondary_button_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/firstTimeLandlordSkipButton"
+                android:text="@string/skip"
+                android:textColor="@color/white"
+                android:textSize="@dimen/secondary_button_font_size"
+                android:background="@drawable/secondary_button_background_state"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/secondary_button_gap_height"
+                android:layout_marginBottom="@dimen/secondary_button_gap_height"
+                android:layout_alignParentBottom="true"
+                />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
