--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,61 +6,87 @@
     android:layout_height="match_parent"
     tools:context=".login.ForgotPasswordActivity">
 
-    <EditText
-        android:layout_width="@dimen/input_field_width"
-        android:layout_height="@dimen/input_field_height"
-        android:id="@+id/forgotPasswordEmail"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:textAlignment="center"
-        android:textSize="@dimen/input_field_font_size"
-        android:textColor="@color/primary_blue"
-        android:textColorHint="@color/primary_blue_low"
-        android:background="@drawable/edittext_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/forgotPasswordAlert"
-        android:text="@string/login_error"
-        android:textColor="@color/alert_red"
-        android:textSize="@dimen/copyright_font_size"
-        android:layout_below="@id/forgotPasswordEmail"
-        android:layout_centerHorizontal="true"
-        android:visibility="invisible"
-        android:layout_marginTop="5dp"
-        />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3">
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/forgotPasswordButton"
-        android:text="@string/forgot_password_button"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/primary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/group_gap_height"
-        android:layout_below="@id/forgotPasswordEmail"
-        />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/main_propster_logo"
+                android:contentDescription="@string/app_name"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                />
 
-    <android.widget.Button
-        android:layout_width="@dimen/secondary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/forgotPasswordBackButton"
-        android:text="@string/back"
-        android:textColor="@color/white"
-        android:textSize="@dimen/secondary_button_font_size"
-        android:background="@drawable/secondary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_below="@id/forgotPasswordButton"
-        />
+        </RelativeLayout>
 
-<!--    android:background="@drawable/secondary_button_background_state"-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5">
+
+            <EditText
+                android:layout_width="@dimen/input_field_width"
+                android:layout_height="@dimen/input_field_height"
+                android:id="@+id/forgotPasswordEmail"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
+                android:textAlignment="center"
+                android:textSize="@dimen/input_field_font_size"
+                android:textColor="@color/black"
+                android:textColorHint="@color/disabled_grey"
+                android:background="@drawable/edittext_background_state"
+                android:layout_centerHorizontal="true"
+                />
+
+            <TextView
+                android:layout_width="@dimen/input_field_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/forgotPasswordEmailAlert"
+                android:text="@string/register_error_email_empty"
+                android:textColor="@color/alert_red"
+                android:textSize="@dimen/input_field_alert_font_size"
+                android:layout_below="@id/forgotPasswordEmail"
+                android:layout_centerHorizontal="true"
+                android:visibility="invisible"
+                />
+
+            <android.widget.Button
+                android:layout_width="@dimen/primary_button_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/forgotPasswordButton"
+                android:text="@string/forgot_password_button"
+                android:textColor="@color/white"
+                android:textSize="@dimen/primary_button_font_size"
+                android:background="@drawable/primary_button_background_state"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/group_gap_height"
+                android:layout_below="@id/forgotPasswordEmail"
+                />
+
+            <android.widget.Button
+                android:layout_width="@dimen/secondary_button_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/forgotPasswordBackButton"
+                android:text="@string/back"
+                android:textColor="@color/white"
+                android:textSize="@dimen/secondary_button_font_size"
+                android:background="@drawable/secondary_button_background_state"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/primary_button_gap_height"
+                android:layout_below="@id/forgotPasswordButton"
+                />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -72,5 +98,26 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/forgotPasswordBackground"
+        android:background="@color/background_black"
+        android:visibility="gone"
+        />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/forgotPasswordLoadingSpinner"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/secondary_blue"
+        android:visibility="gone"
+        />
+
+
 
 </RelativeLayout>
