--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,85 +6,125 @@
     android:layout_height="match_parent"
     tools:context=".login.LoginActivity">
 
-    <EditText
-        android:layout_width="@dimen/input_field_width"
-        android:layout_height="@dimen/input_field_height"
-        android:id="@+id/loginUsername"
-        android:hint="@string/username"
-        android:inputType="textEmailAddress"
-        android:textAlignment="center"
-        android:textSize="@dimen/input_field_font_size"
-        android:textColor="@color/primary_blue"
-        android:textColorHint="@color/primary_blue_low"
-        android:background="@drawable/edittext_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <EditText
-        android:layout_width="@dimen/input_field_width"
-        android:layout_height="@dimen/input_field_height"
-        android:id="@+id/loginPassword"
-        android:inputType="textPassword"
-        android:hint="@string/password"
-        android:textAlignment="center"
-        android:textSize="@dimen/input_field_font_size"
-        android:textColor="@color/primary_blue"
-        android:textColorHint="@color/primary_blue_low"
-        android:background="@drawable/edittext_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/input_field_gap_height"
-        android:layout_below="@id/loginUsername"
-        />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/loginAlert"
-        android:text="@string/login_error"
-        android:textColor="@color/alert_red"
-        android:textSize="@dimen/copyright_font_size"
-        android:layout_below="@id/loginPassword"
-        android:layout_centerHorizontal="true"
-        android:visibility="invisible"
-        android:layout_marginTop="5dp"
-        />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/main_propster_logo"
+                android:contentDescription="@string/app_name"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                />
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/registerButton"
-        android:text="@string/register"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/primary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/group_gap_height"
-        android:layout_below="@id/loginPassword"
-        />
+        </RelativeLayout>
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/loginButton"
-        android:text="@string/login"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/primary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_below="@id/registerButton"
-        />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/forgot_password"
-        android:id="@+id/loginForgotPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_below="@id/loginButton"
-        />
+            <EditText
+                android:layout_width="@dimen/input_field_width"
+                android:layout_height="@dimen/input_field_height"
+                android:id="@+id/loginUsername"
+                android:hint="@string/username"
+                android:inputType="textEmailAddress"
+                android:textAlignment="center"
+                android:textSize="@dimen/input_field_font_size"
+                android:textColor="@color/black"
+                android:textColorHint="@color/disabled_grey"
+                android:background="@drawable/edittext_background_state"
+                android:layout_centerHorizontal="true"
+                />
+
+            <TextView
+                android:layout_width="@dimen/input_field_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/loginUsernameAlert"
+                android:text="@string/login_error_username_empty"
+                android:textColor="@color/alert_red"
+                android:textSize="@dimen/input_field_alert_font_size"
+                android:layout_below="@id/loginUsername"
+                android:layout_centerHorizontal="true"
+                android:visibility="invisible"
+                />
+
+            <EditText
+                android:layout_width="@dimen/input_field_width"
+                android:layout_height="@dimen/input_field_height"
+                android:id="@+id/loginPassword"
+                android:inputType="textPassword"
+                android:hint="@string/password"
+                android:textAlignment="center"
+                android:textSize="@dimen/input_field_font_size"
+                android:textColor="@color/black"
+                android:textColorHint="@color/disabled_grey"
+                android:background="@drawable/edittext_background_state"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/input_field_gap_height"
+                android:layout_below="@id/loginUsername"
+                />
+
+            <TextView
+                android:layout_width="@dimen/input_field_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/loginPasswordAlert"
+                android:text="@string/login_error_password_empty"
+                android:textColor="@color/alert_red"
+                android:textSize="@dimen/input_field_alert_font_size"
+                android:layout_below="@id/loginPassword"
+                android:layout_centerHorizontal="true"
+                android:visibility="invisible"
+                />
+
+            <android.widget.Button
+                android:layout_width="@dimen/primary_button_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/loginRegisterButton"
+                android:text="@string/register"
+                android:textColor="@color/white"
+                android:textSize="@dimen/primary_button_font_size"
+                android:background="@drawable/primary_button_background_state"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/group_gap_height"
+                android:layout_below="@id/loginPassword"
+                />
+
+            <android.widget.Button
+                android:layout_width="@dimen/primary_button_width"
+                android:layout_height="wrap_content"
+                android:id="@+id/loginButton"
+                android:text="@string/login"
+                android:textColor="@color/white"
+                android:textSize="@dimen/primary_button_font_size"
+                android:background="@drawable/primary_button_background_state"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/primary_button_gap_height"
+                android:layout_below="@id/loginRegisterButton"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_password"
+                android:id="@+id/loginForgotPassword"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/primary_button_gap_height"
+                android:layout_below="@id/loginButton"
+                />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -96,5 +136,25 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/loginBackground"
+        android:background="@color/background_black"
+        android:visibility="gone"
+        />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loginLoadingSpinner"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/secondary_blue"
+        android:visibility="gone"
+        />
+
 
 </RelativeLayout>
