--- a/app/src/main/res/layout/activity_landlord_content_manage.xml
+++ b/app/src/main/res/layout/activity_landlord_content_manage.xml
@@ -1,54 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/landlordManageFirstTimeLoginLabel"
-        android:text="@string/first_time_login_as_landlord"
-        android:textSize="@dimen/large_text_font_size"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/min_group_margin"
-        android:visibility="gone"
-        />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/landlordManageAddPropertyButton"
-        android:layout_marginStart="@dimen/min_group_margin"
-        android:layout_marginEnd="@dimen/min_group_margin"
-        android:layout_alignParentTop="true"
-        >
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/landlordManagePropertyList"
-            />
-
-<!--        android:divider="@color/white"-->
-<!--        android:dividerHeight="0dp"-->
-
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    >
 
     <android.widget.Button
-        android:layout_width="@dimen/large_button_width"
+        android:layout_width="@dimen/primary_button_width"
         android:layout_height="wrap_content"
-        android:id="@+id/landlordManageAddPropertyButton"
-        android:text="@string/add_property"
+        android:id="@+id/landlordContentManagePropertyPropertyExpensesButton"
+        android:text="@string/property_expenses"
         android:textColor="@color/white"
-        android:textSize="@dimen/large_button_font_size"
+        android:textSize="@dimen/primary_button_font_size"
         android:background="@drawable/primary_button_background_state"
         android:layout_centerHorizontal="true"
-        android:paddingTop="@dimen/large_button_padding"
-        android:paddingBottom="@dimen/large_button_padding"
         android:layout_marginTop="@dimen/group_gap_height"
-        android:layout_marginBottom="@dimen/secondary_button_gap_height"
-        android:layout_alignParentBottom="true"
+        />
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordContentManagePropertyPropertyListButton"
+        android:text="@string/properties"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/group_gap_height"
+        android:layout_below="@id/landlordContentManagePropertyPropertyExpensesButton"
+        />
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordContentManagePropertyPaymentRecordsButton"
+        android:text="@string/payment_records"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/group_gap_height"
+        android:layout_below="@id/landlordContentManagePropertyPropertyListButton"
+        />
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordContentManagePropertyTenantsButton"
+        android:text="@string/tenants"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/group_gap_height"
+        android:layout_below="@id/landlordContentManagePropertyPaymentRecordsButton"
+        />
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordContentManagePropertyTenureContractsButton"
+        android:text="@string/tenure_contracts"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/group_gap_height"
+        android:layout_below="@id/landlordContentManagePropertyTenantsButton"
         />
 
 </RelativeLayout>
