--- a/app/src/main/res/layout/activity_landlord_property_detail.xml
+++ b/app/src/main/res/layout/activity_landlord_property_detail.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".landlord.LandlordPropertyDetailActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordPropertyDetailToolbar"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        android:elevation="@dimen/toolbar_elevation"
+        android:background="@color/white"
+        />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/landlordPropertyDetailSaveButton"
         android:layout_marginStart="@dimen/min_group_margin"
         android:layout_marginEnd="@dimen/min_group_margin"
+        android:layout_below="@id/landlordPropertyDetailToolbar"
         >
 
         <TextView
