--- a/app/src/main/res/layout/activity_landlord_property_tenant_list.xml
+++ b/app/src/main/res/layout/activity_landlord_property_tenant_list.xml
@@ -6,11 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".landlord.LandlordPropertyTenantListActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordManagePropertyTenantListToolbar"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        android:elevation="@dimen/toolbar_elevation"
+        android:background="@color/white"
+        />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/landlordPropertyAddTenantButton"
-        android:layout_alignParentTop="true"
+        android:layout_above="@id/landlordManagePropertyAddTenantButton"
+        android:layout_below="@id/landlordManagePropertyTenantListToolbar"
         >
 
         <ListView
@@ -25,20 +34,89 @@
     </RelativeLayout>
 
     <android.widget.Button
-        android:layout_width="@dimen/large_button_width"
+        android:layout_width="@dimen/primary_button_width"
         android:layout_height="wrap_content"
-        android:id="@+id/landlordPropertyAddTenantButton"
+        android:id="@+id/landlordManagePropertyAddTenantButton"
         android:text="@string/add_tenant"
         android:textColor="@color/white"
-        android:textSize="@dimen/large_button_font_size"
+        android:textSize="@dimen/primary_button_font_size"
         android:background="@drawable/primary_button_background_state"
         android:layout_centerHorizontal="true"
-        android:paddingTop="@dimen/large_button_padding"
-        android:paddingBottom="@dimen/large_button_padding"
         android:layout_marginTop="@dimen/group_gap_height"
-        android:layout_marginBottom="@dimen/secondary_button_gap_height"
+        android:layout_above="@id/landlordManagePropertyAddTenantDetailButton"
+        />
+    <!--    android:paddingTop="@dimen/large_button_padding"-->
+    <!--    android:paddingBottom="@dimen/large_button_padding"-->
+<!--    android:layout_marginBottom="@dimen/secondary_button_gap_height"-->
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordManagePropertyAddTenantDetailButton"
+        android:text="@string/property_detail"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/primary_button_gap_height"
+        android:layout_above="@id/landlordManagePropertyAddTenantExpensesButton"
+        />
+<!--    android:paddingTop="@dimen/large_button_padding"-->
+<!--    android:paddingBottom="@dimen/large_button_padding"-->
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordManagePropertyAddTenantExpensesButton"
+        android:text="@string/property_expenses"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/primary_button_gap_height"
+        android:layout_above="@id/landlordManagePropertyAddTenantPaymentRecordsButton"
+        />
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordManagePropertyAddTenantPaymentRecordsButton"
+        android:text="@string/payment_records"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/primary_button_gap_height"
+        android:layout_above="@id/landlordManagePropertyAddTenantTenureContractButton"
+        />
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordManagePropertyAddTenantTenureContractButton"
+        android:text="@string/tenure_contracts"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/primary_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/primary_button_gap_height"
+        android:layout_above="@id/landlordManagePropertyAddTenanRemovePropertyButton"
+        />
+
+    <android.widget.Button
+        android:layout_width="@dimen/primary_button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/landlordManagePropertyAddTenanRemovePropertyButton"
+        android:text="@string/remove_property"
+        android:textColor="@color/white"
+        android:textSize="@dimen/primary_button_font_size"
+        android:background="@drawable/alert_button_background_state"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/primary_button_gap_height"
+        android:layout_marginBottom="@dimen/primary_button_gap_height"
         android:layout_alignParentBottom="true"
         />
+
 
     <View
         android:layout_width="match_parent"
