--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="secondary_blue_low">#664895EF</color>
     <color name="disabled_blue">#4CC9F0</color>
     <color name="alert_red">#F72585</color>
+    <color name="alert_red_low">#66F72585</color>
 
     <color name="disabled_grey">#FF989898</color>
     <color name="background_black">#99000000</color>
