--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -29,6 +29,12 @@
     <dimen name="group_gap_height">25dp</dimen>
     <dimen name="min_group_margin">15dp</dimen>
 
+    <dimen name="user_profile_image_width">120dp</dimen>
+    <dimen name="user_profile_image_height">120dp</dimen>
+    <dimen name="user_profile_image_padding">10dp</dimen>
+
+    <dimen name="toolbar_elevation">10dp</dimen>
+
     <dimen name="tab_layout_elevation">10dp</dimen>
     <dimen name="tab_layout_font_size">10sp</dimen>
 
